# giga-trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Plans.md  README.md  claude-code-harness.config.json  pyproject.toml  requirements.txt
config/: data_sources.yaml  edge_strategies.yaml  moltbot_full_pipeline.md  moltbot_workflow.yaml  monitoring.yaml  pipeline.yaml  pipeline_status.yaml  risk_management.yaml  sentiment_pipeline.yaml  trading_modes.yaml
docs/: ARCHITECTURE.md  COMPONENTS.md  GETTING_STARTED.md  GRID_SEARCH_DIAGRAM.md
reports/: data_source_analysis.csv
scripts/: analyze_data_sources.py  autostart_giga_trader.bat  backtest_temporal_models.py  campaign_report.py  check_syntax.py  health_check.py  launch_campaign.py  migrate_to_sqlite.py  preflight-tests.mjs  quick_leak_test.py  quick_status.py  reevaluate_models.py  register_existing_models.py  registry_cli.py  reset_registry.py  retrain_temporal_models.py  run_grid_search.py  run_thick_weave_search.py  start_long_runner.py  start_system.py  test_alpaca_data.py  test_feature_research.py  test_leak_proof.py  test_paper_trade.py  train_temporal_cascade.py
src/: advanced_temporal_cascades.py  anti_overfit.py  backtest_engine.py  backtesting_harness.py  dashboard.py  dashboard_server.py  data_manager.py  dynamic_model_selector.py  enhanced_signal_generator.py  entry_exit_model.py  experiment_config.py  experiment_engine.py  experiment_progress.py  giga_orchestrator.py  leak_proof_cv.py  model_registry_v2.py  multi_agent_system.py  paper_trading.py  pipeline_grid.py  position_tracker.py  web_monitor.py  (+9 more)
(+412 files in other folders)
